--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "extra-console",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Console is a global object used for interacting with terminal and IO streams.",
   "main": "index.js",
-  "scripts": {
-    "test": "exit"
+  "module": "index.mjs",
+  "sideEffects": false,
+  "exports": {
+    "require": "./index.js",
+    "import": "./index.mjs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nodef/extra-console.git"
+  "scripts": {
+    "test": "exit",
+    "build": "node ./build",
+    "deploy": "node ./build deploy"
   },
   "keywords": [
     "extra",
@@ -16,8 +20,20 @@
   ],
   "author": "wolfram77@gmail.com",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nodef/extra-console.git"
+  },
   "bugs": {
     "url": "https://github.com/nodef/extra-console/issues"
   },
-  "homepage": "https://github.com/nodef/extra-console#readme"
+  "homepage": "https://github.com/nodef/extra-console#readme",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.2.0",
+    "@types/node": "^17.0.23",
+    "extra-build": "^2.0.31",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-dts": "^4.2.1"
+  }
 }
